k8s/apps/prod/ota-update-repo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ota-update-repo
  labels:
    name: ota-update-repo
